# networking-cisco

./: .gitreview  .zuul.yaml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
etc/neutron/plugins/cisco/: aci_asr_config.ini
etc/topology-agent/init/: neutron-cisco-topology-agent.conf
networking_cisco/agent/: aci_topology.py  lldp_topology.py  nxos_topology.py
networking_cisco/apps/saf/agent/topo_disc/: pub_lldp_api.py
networking_cisco/apps/saf/common/: config.py  constants.py
networking_cisco/config/: opts.py
networking_cisco/db/migration/alembic_migrations/versions/: EXPAND_HEAD
networking_cisco/db/migration/alembic_migrations/versions/2023.1/expand/: 7f8e2a9c1bd4_add_network_label_mapping.py  8a7b21c3f1a2_add_nd_name_to_address_scope.py  9abcd1234def_add_nd_network_extensions.py
networking_cisco/db/migration/alembic_migrations/versions/liberty/contract/: 53f08de0523f_neutron_routers_in_cisco_devices.py
networking_cisco/db/migration/alembic_migrations/versions/liberty/expand/: 11ba2d65c8de_add_missing_tenant_id_index.py  1e9e22602685_ha_for_routing_service_in_cisco_devices.py  2921fe565328_cisco_device_management.py  414ff6eb123a_multiple_ucs_manager_support.py
networking_cisco/db/migration/alembic_migrations/versions/mitaka/contract/: c52284b920fd_remove_n1kv_tables.py
networking_cisco/db/migration/alembic_migrations/versions/mitaka/expand/: 13bd9ebffbf5_add_support_for_ucsm_service_profile_.py  203b495958cf_add_port_profile_delete_table_for_ucsm_.py  2e89171ea204_add_baremetal_channel_group_and_is_.py  6454463cea8b_add_hostid_as_primary_key_to_mapping_.py  681d19b7070e_add_host_interface_mapping_table.py  73c84db9f299_update_ha_group_primary_key.py  9148d96f9b39_rename_tenantid_to_projectid.py  972479e0e629_nexus_provider_network.py  b29f1026b281_add_support_for_ucsm_vnic_templates.py  f3765e42de23_add_vpc_alloc_table.py
networking_cisco/db/migration/models/: head.py
networking_cisco/ml2_drivers/ndfc/: __init__.py  config.py  constants.py  db.py  db_tool.py  extension_db.py  extension_driver.py  mech_ndfc.py  ndfc.py  ndfc_helper.py  type_nd.py
networking_cisco/ml2_drivers/ndfc/extension_overrides/: patched_address_scope.py
networking_cisco/ml2_drivers/ndfc/extensions/: ndfc_address_scope.py  ndfc_network_deploy.py
networking_cisco/ml2_drivers/ovn_hpb/: mech_ovn_hpb.py
networking_cisco/neutronclient/: ndfc_address_scope.py  ndfc_network_deploy.py
networking_cisco/osc/v2/: address_scope.py  network.py
networking_cisco/plugins/cisco/cfg_agent/: cfg_agent.py
networking_cisco/plugins/cisco/cfg_agent/device_drivers/asr1k/: aci_asr1k_routing_driver.py  asr1k_cfg_syncer.py  asr1k_routing_driver.py
networking_cisco/plugins/cisco/cfg_agent/service_helpers/: routing_svc_helper_aci.py
networking_cisco/plugins/cisco/common/: cisco_constants.py
networking_cisco/plugins/cisco/cpnr/: cpnr_dns_relay_agent.py  dhcp_driver.py
networking_cisco/plugins/cisco/db/l3/: l3_router_appliance_db.py
networking_cisco/plugins/cisco/device_manager/: config.py
networking_cisco/plugins/cisco/device_manager/plugging_drivers/: aci_vlan_trunking_driver.py
networking_cisco/plugins/cisco/extensions/: ciscocfgagentscheduler.py  routertypeawarescheduler.py
networking_cisco/plugins/cisco/l3/drivers/: __init__.py
networking_cisco/plugins/cisco/l3/drivers/asr1k/: aci_asr1k_routertype_driver.py  asr1k_routertype_driver.py
networking_cisco/plugins/cisco/service_plugins/: cisco_device_manager_plugin.py  cisco_router_plugin.py
networking_cisco/plugins/ml2/: nd_extension_manager.py  nd_manager.py  nd_ml2.py
networking_cisco/rpc/: lldp_handler.py  lldp_topology.py
networking_cisco/tests/unit/agent/: test_topology_agent.py  topology_agent_data.py
networking_cisco/tests/unit/cisco/cfg_agent/: test_aciasr1k_routing_driver.py  test_asr1k_routing_driver.py  test_routing_svc_helper.py  test_routing_svc_helper_aci.py
networking_cisco/tests/unit/cisco/cpnr/: test_dns_relay.py
networking_cisco/tests/unit/cisco/device_manager/: test_aci_vlan_trunking_driver.py  test_db_device_manager.py  test_hosting_device_cfg_agent_scheduler.py
networking_cisco/tests/unit/cisco/etc/: cisco_device_manager_plugin.ini  cisco_router_plugin.ini
networking_cisco/tests/unit/cisco/etc/ha/: cisco_router_plugin.ini
networking_cisco/tests/unit/cisco/l3/: test_aciasr1k_routertype_driver.py  test_asr1k_routertype_driver.py  test_db_routertype.py  test_ha_l3_router_appliance_plugin.py  test_l3_router_appliance_plugin.py
networking_cisco/tests/unit/db/: test_migrations.py
networking_cisco/tests/unit/ml2_drivers/ndfc/: test_base.py  test_db_tool.py  test_ndfc.py  test_ndfc_address_scope_ext.py  test_ndfc_db.py  test_ndfc_helper.py  test_ndfc_mech.py  test_ndfc_network_deploy_ext.py  test_type_nd.py
networking_cisco/tests/unit/ml2_drivers/ovn_hpb/: test_mech_ovn_hpb.py
networking_cisco/tests/unit/osc/v2/: test_ndfc_address_scope_osc.py  test_ndfc_network_deploy_osc.py
networking_cisco/tests/unit/plugins/ml2/: test_nd_manager.py  test_nd_ml2_plugin.py
