[metadata]
name = networking-cisco
summary = Networking Cisco contains drivers for OpenStack Neutron to support Cisco equipment and products
description-file =
    README.rst
author = Cisco Systems
author-email = openstack-networking@cisco.com
home-page = https://github.com/openstack/networking-cisco
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5

[files]
packages =
    networking_cisco
    networking_cisco_tempest_plugin

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    neutron-cisco-topology-agent = networking_cisco.agent.agent:main
    neutron-cisco-db-tool = networking_cisco.ml2_drivers.ndfc.db_tool:main
    cpnr-rootwrap = oslo_rootwrap.cmd:main

neutron.ml2.type_drivers =
    nd = networking_cisco.ml2_drivers.ndfc.type_nd:NdfcNdTypeDriver
neutron.ml2.mechanism_drivers =
    ndfc = networking_cisco.ml2_drivers.ndfc.mech_ndfc:NDFCMechanismDriver

# Extension Drivers
neutron.ml2.extension_drivers =
    nd_extension_driver = networking_cisco.ml2_drivers.ndfc.extension_driver:NdExtensionDriver
neutron.db.alembic_migrations =
    networking-cisco = networking_cisco.db.migration:alembic_migrations

# Extensions to neutronclient
neutronclient.extension =
    hosting_devices = networking_cisco.neutronclient.hostingdevice
    hosting_device_scheduler = networking_cisco.neutronclient.hostingdevicescheduler
    hosting_device_templates = networking_cisco.neutronclient.hostingdevicetemplate
    router_scheduler = networking_cisco.neutronclient.routerscheduler
    router_types = networking_cisco.neutronclient.routertype
    policy_profile = networking_cisco.neutronclient.policyprofile
    network_profile = networking_cisco.neutronclient.networkprofile

tempest.test_plugins =
    networking_cisco_tempest_plugin = networking_cisco_tempest_plugin.plugin:NetworkingCiscoTempestPlugin

oslo.config.opts =
    networking_cisco.nexus = networking_cisco.config.opts:list_nexus_conf_opts
    networking_cisco.nexus_vxlan_type_driver = networking_cisco.config.opts:list_nexus_vxlan_type_driver_conf_opts
    networking_cisco.ucsm = networking_cisco.config.opts:list_ucsm_conf_opts
    networking_cisco.router_plugin = networking_cisco.config.opts:list_asr_conf_opts

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_cisco/locale/networking-cisco.pot

[compile_catalog]
directory = networking_cisco/locale
domain = networking-cisco

[update_catalog]
domain = networking-cisco
output_dir = networking_cisco/locale
input_file = networking_cisco/locale/networking-cisco.pot

[wheel]
universal = 1
